--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:KLEllPoxgAK1JYB3Ixg3HyVO4BLJUaO35LbRMWOHVGA=
+APP_KEY=base64:Cm90ePdTOISq8Qkn8U7E+J9hC5gcsHbNyYjV+0qFkVk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sol
+DB_DATABASE=inventarioPHP
 DB_USERNAME=root
-DB_PASSWORD=amorfati2004
+DB_PASSWORD="$Carlos1030"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
