--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
         "mckenziearts/blade-untitledui-icons": "^1.3",
+        "owenvoke/blade-fontawesome": "^2.6",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
